--- a/public/500.html
+++ b/public/500.html
@@ -18,7 +18,7 @@
             border-right-color: #999;
             border-left-color: #999;
             border-bottom-color: #BBB;
-            border-top: #B00100 solid 4px;
+            border-top: #0e60a0 solid 4px;
             border-top-left-radius: 9px;
             border-top-right-radius: 9px;
             background-color: white;
@@ -27,7 +27,7 @@
 
         h1 {
             font-size: 100%;
-            color: #730E15;
+            color: #0e60a0;
             line-height: 1.5em;
         }
 
